wait_loader causing scrollbar fix

--- a/CSS/Base/Structure.css
+++ b/CSS/Base/Structure.css
@@ -1,5 +1,5 @@
 #main-wrapper {
-	margin: 0 auto;
+	margin: -8px auto 0;
 	padding: 0 20px;
 	height: 100%;
 	background: #fff;
